name:           upcast
version:        0.2.0.0
license-file:   LICENSE
license:        MIT
author:         Vladimir Kirillov
maintainer:     vlad@kirillov.im
copyright:      2014, 2015, 2016 Zalora South East Asia Pte Ltd, 2018 Vladimir Kirillov
build-type:     Simple
cabal-version:  >= 1.10
synopsis:       Nix remote building tools
description:    Nix remote building tools
category:       Automation
homepage:       https://github.com/proger/upcast#readme
bug-reports:    https://github.com/proger/upcast/issues

source-repository head
  type: git
  location: https://github.com/proger/upcast

library
  hs-source-dirs:
      lib
  default-extensions: OverloadedStrings
  build-depends:
      base
    , bytestring
    , conduit
    , resourcet
    , conduit-extra
    , containers
    , directory
    , exceptions
    , filepath
    , mtl
    , natural-sort
    , process
    , random
    , resourcet
    , semigroups
    , text
    , time
    , unix
    , unordered-containers
    , vk-posix-pty >= 0.2.1
  exposed-modules:
      Upcast.Install
      Upcast.Environment
      Upcast.Monad
      Upcast.IO
      Upcast.Deploy
      Upcast.Shell
      Upcast.Shell.Run
      Upcast.Shell.Temp
      Upcast.Shell.Types
      Upcast.Types
  default-language: Haskell2010

executable upcast
  main-is: upcast.hs
  hs-source-dirs:
      cmd
  default-extensions: OverloadedStrings
  build-depends:
      upcast
    , base < 5
    , optparse-applicative >= 0.11.0.1
  default-language: Haskell2010
